k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internship-cluster-ip
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  - name: https
    port: 443
    protocol: TCP
    targetPort: 3000
  selector:
    app: internship-deployment
  type: ClusterIP
