k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internship-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: internship-letsencrypt-dev
spec:
  tls:
  - hosts:
    - node-example.juffalow.com
    secretName: internship-tls
  rules:
  - host: node-example.juffalow.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: internship-cluster-ip
            port:
              number: 80
